sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: illegal start of simple pattern
  var i int: 0
           ^AlgBubbleSort1:4: error: '=' expected but ';' found.
  for (i <- 1 to getNombreValeurs()){
^